[package]
name = "mruby-sys"
version = "0.0.1"
authors = ["Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.35"

[features]
default = ["utf8-string", "method-cache", "default-gembox"]
float-32 = []
utf8-string = []
method-cache = []
default-gembox = []
